# docs/swagger.yaml
@@ -151,6 +151,21 @@ definitions:
         example: 550e8400-e29b-41d4-a716-446655440000
         type: string
     type: object
+  github_com_faridlan_sikon-api_internal_delivery_http_dto.DashboardSummaryResponse:
+    properties:
+      total_active_orders:
+        type: integer
+      total_canceled_orders:
+        type: integer
+      total_completed_orders:
+        type: integer
+      total_payment_received:
+        type: number
+      total_receivable:
+        type: number
+      total_revenue:
+        type: number
+    type: object
   github_com_faridlan_sikon-api_internal_delivery_http_dto.OrderCreateRequest:
     properties:
       courier_name:
@@ -726,6 +741,13 @@ definitions:
       message:
         type: string
     type: object
+  ? github_com_faridlan_sikon-api_internal_utils.SuccessResponse-github_com_faridlan_sikon-api_internal_delivery_http_dto_DashboardSummaryResponse
+  : properties:
+      data:
+        $ref: '#/definitions/github_com_faridlan_sikon-api_internal_delivery_http_dto.DashboardSummaryResponse'
+      message:
+        type: string
+    type: object
   ? github_com_faridlan_sikon-api_internal_utils.SuccessResponse-github_com_faridlan_sikon-api_internal_delivery_http_dto_OrderResponse
   : properties:
       data:
@@ -1281,6 +1303,36 @@ paths:
       summary: Update Customer
       tags:
       - Customers
+  /dashboard/summary:
+    get:
+      description: Mengambil metrik utama untuk halaman dashboard utama. Menghitung
+        total omzet, uang masuk, sisa tagihan/piutang (akumulatif all-time), dan status
+        pesanan.
+      parameters:
+      - description: 'Filter Tanggal Mulai (Format: YYYY-MM-DD)'
+        in: query
+        name: start_date
+        type: string
+      - description: 'Filter Tanggal Akhir (Format: YYYY-MM-DD)'
+        in: query
+        name: end_date
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/github_com_faridlan_sikon-api_internal_utils.SuccessResponse-github_com_faridlan_sikon-api_internal_delivery_http_dto_DashboardSummaryResponse'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/github_com_faridlan_sikon-api_internal_utils.ErrorResponse'
+      security:
+      - BearerAuth: []
+      summary: Get Dashboard Summary
+      tags:
+      - Dashboard
   /orders:
     get:
       description: Mengambil daftar seluruh pesanan dengan fitur pagination dan multiple
